# oraculo-mccomics

./: .gitignore  AVANCES.md  LICENSE  PLAN_ESTRATEGICO.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
_PLAN_Y_AVANCES/: AVANCES.md  PLAN_ESTRATEGICO.md
docs/: API_CONTRACT_SPEC.md  CONTEXT_ASSEMBLY_POLICY.md  PLAN_MAESTRO_v4.md  POLICY_ENGINE_SPEC.md  POLYGLOT_FABRIC_SPEC.md  PROJECT_STRUCTURE_SPEC.md  THREAT_MODEL_ORACULO_v4.md
profiles/: banking.yaml  basic.yaml  enterprise.yaml
scripts/: build.py
src/oraculo/: __init__.py  __version__.py  app.py  main.py  pre_flight.py
src/oraculo/api/: auth.py  ipc_bridge.py  routes.py  server.py
src/oraculo/assembler/: budget_allocator.py  payload_builder.py  pipeline.py  trust_tier.py
src/oraculo/audit/: audit_chain.py
src/oraculo/cli/: main.py
src/oraculo/client/: python_client.py
src/oraculo/cognitive/: core.py  llama_provider.py  model_downloader.py  model_registry.py  ollama_provider.py  openai_provider.py  provider.py  query_expander.py  reranker.py
src/oraculo/core/: config.py  constants.py  degraded_mode.py  exceptions.py  logging_setup.py  shutdown.py
src/oraculo/crypto/: crypto_shred.py
src/oraculo/index/: call_graph.py  debouncer.py  domain_manager.py  duckdb_store.py  incremental.py  integrity_check.py  pipeline.py  row_hmac.py  sqlite_store.py  stale_detector.py  symbol_table.py  watcher.py
src/oraculo/policy/: __init__.py  engine.py  (+4 more)
tests/: conftest.py
tests/integration/: test_e2e.py
tests/unit/: test_api.py  test_assembler.py  test_build.py  test_cli.py  test_cognitive.py  test_index_engine.py  test_legacy_parsers.py  test_model_downloader.py  test_pipeline.py  test_policy_engine.py  test_polyglot.py  test_retrieval.py  test_security.py  test_ui.py
(+26 files in other folders)
